# GrACIAS

./: CMakeLists.txt  README.md  audio_dev.ipynb  env.txt  gracias_env.yaml  gracias_env.yml  hri_dev.ipynb  hri_env.yml  package.xml  sit_int_env.yml  stream_asr.py  working_env.yml
GrACIAS/models/: cp_resnet_dampfr_gate_prune.py  cp_resnet_freqdamp_old_challenge.py
config/: ar_commands.yaml  beams.yaml  default_exp_params.yaml  experiment_tracker.yaml  kinect_array.json  kinect_array.yaml  kinect_config.yaml  lexicon.txt  oakd_gesture_demo_params.yaml  oakd_gesture_tracker_params.yaml  oakd_img_tracker_exp1.yaml  oakd_params.yaml  oakd_params_exp1.yaml  philbart_config.yaml  philbart_tracker.yaml  respeaker_array.yaml  respeaker_config.yaml  semantic_fusion_params_exp1.yaml  semantic_tracking_params.yaml  tr_mean_676d70_f1_apd18_stereo_obj.pt  tr_std_676d70_f1_apd18_stereo_obj.pt
config/exp1_cfgs/: default_exp_params.yaml  rn50_basic.yaml  rn50_detailed.yaml  vitb32_basic.yaml  vitb32_detailed.yaml  vitl14_basic.yaml  vitl14_detailed.yaml
config/exp2_cfgs/: default_cmd_exp_params.yaml  default_exp_params.yaml  default_role_exp_params.yaml  exp2_ar_role_ar_cmd.yaml  exp2_ar_role_gesture_cmd.yaml  exp2_ar_role_verbal_cmd.yaml  exp2_ar_role_verbal_cmd_cssm.yaml  exp2_ar_role_verbal_cmd_music.yaml  exp2_ar_role_verbal_cmd_music_best_campus.yaml  exp2_ar_role_verbal_cmd_music_best_courtyard.yaml  exp2_ar_role_verbal_cmd_music_best_lab.yaml  exp2_ar_role_verbal_cmd_music_best_lobby.yaml  exp2_ar_role_verbal_cmd_music_best_overall.yaml  exp2_ar_role_verbal_cmd_srpphat.yaml  exp2_ar_role_verbal_cmd_srpphat_best_campus.yaml  exp2_ar_role_verbal_cmd_srpphat_best_courtyard.yaml  exp2_ar_role_verbal_cmd_srpphat_best_lab.yaml  exp2_ar_role_verbal_cmd_srpphat_best_lobby.yaml  exp2_ar_role_verbal_cmd_srpphat_best_overall.yaml  exp2_ar_role_verbal_cmd_tops.yaml  exp2_ar_role_verbal_cmd_tops_best_campus.yaml  exp2_ar_role_verbal_cmd_tops_best_courtyard.yaml  exp2_ar_role_verbal_cmd_tops_best_lab.yaml  exp2_ar_role_verbal_cmd_tops_best_lobby.yaml  exp2_ar_role_verbal_cmd_tops_best_overall.yaml  exp2_ar_role_verbal_cmd_waves.yaml  exp2_ar_role_verbal_cmd_waves_best_campus.yaml  exp2_ar_role_verbal_cmd_waves_best_courtyard.yaml  exp2_ar_role_verbal_cmd_waves_best_lab.yaml  exp2_ar_role_verbal_cmd_waves_best_lobby.yaml  exp2_ar_role_verbal_cmd_waves_best_overall.yaml  exp2_vis_role_ar_cmd.yaml  gesture_exp_params_dev.yaml  semantic_fusion_params_exp2.yaml
docker/: ar_bridge.Dockerfile  ar_bridge_entrypoint.sh  ar_track.Dockerfile  ar_track_entrypoint.sh  bridge.Dockerfile  docker-compose.yaml  perception.Dockerfile  perception_entrypoint.sh  ros1.Dockerfile  ros1_ar_entrypoint.sh  ros1_leg_detector_entrypoint.sh  ros1_pcl_to_scan_entrypoint.sh
docker/experiments/: bridge.Dockerfile  docker-compose.yaml  ros1_ar.Dockerfile
docker/robot/: bridge.Dockerfile  docker-compose.yaml  ros1.Dockerfile  ros1_master_entrypoint.sh
launch/: analysis.launch.py  analysis_1-2.launch.py  desktop_demo.launch.py  exp0_compute_obs_models.launch.py  exp0a_record_scene_models.launch.py  exp0a_scene_model_nodes.launch.py  exp0b_record_clip_rec_models.launch.py  exp1_record_scene_results.launch.py  exp1a_record_scene_data.launch.py  exp1a_record_scene_data_cfg1.launch.py  exp1a_record_scene_data_cfg2.launch.py  exp1a_record_scene_data_cfg3.launch.py  exp1a_record_scene_data_cfg4.launch.py  exp1a_record_scene_data_cfg5.launch.py  exp1a_record_scene_data_cfg6.launch.py  exp1c_record_hri_data.launch.py  exp2_record_hri_results.launch.py  exp2a_record_role_results.launch.py  exp2b_record_cmd_results.launch.py  gracias_audio.launch.py  gracias_oakd_demo.launch.py  gracias_philbart.launch.py  oak_gesture_dev.launch.py  philbart.launch.py  philbart_exp1_sensors.launch.py  philbart_situated_interaction.launch.py  record_gesture_cmd_results_test.launch.py
models/: cp_resnet_dampfr_gate_prune.py
pretrained_models/ensem1/: description.txt  eval_predictions.csv  eval_predictions_probs.pth  model_config.json  model_from_training_state_dict.pth  model_state_dict.pth
pretrained_models/ensem2/: dataset_config.json  description.txt  eval_predictions.csv  eval_predictions_probs.pth  model_config.json  model_from_training_state_dict.pth  model_state_dict.pth
pretrained_models/ensem3/: model_from_training_state_dict.pth
pretrained_models/sub1/: description.txt  eval_predictions.csv  eval_predictions_probs.pth  model_config.json  model_from_training_state_dict.pth  model_state_dict.pth
pretrained_models/sub2/: description.txt  eval_predictions.csv  eval_predictions_probs.pth  model_config.json  model_from_training_state_dict.pth  model_state_dict.pth
pretrained_models/sub3/: description.txt  eval_predictions.csv  eval_predictions_probs.pth  model_config.json  model_from_training_state_dict.pth  model_state_dict.pth
results/: speech_eval.csv  speech_eval_mini.csv  speech_eval_speech_dev_dataset.csv
scripts/: action_engine_node.py  audio_acq_node.py  audio_bf_node.py  audio_proc_node.py  clip_vis_rec_server.py  cmd_exp_mgr.py  download_dataset.sh  dummy_sub.py  gesture_rec_server.py  hri_exp_mgr.py  int_mgr_node.py  person_vis_rec_server.py  record_hierarchical_cmd_results_node.py  record_scene_results_node.py  record_tracker_results_node.py  record_trial_data.sh  role_exp_mgr.py  scene_exp_mgr.py  scene_rec_node.py  scene_voice_node.py  semantic_tracking_node.py  voice_proc_node.py
situated_interaction/: assignment.py  datatypes.py  output.py  utils.py
src/: artag_preproc.cpp  track_preproc.cpp
(+170 files in other folders)
